Blasting & Smelting recipes for Molybdenum

--- a/src/main/resources/assets/powertech/lang/en_us.json
+++ b/src/main/resources/assets/powertech/lang/en_us.json
@@ -6,6 +6,7 @@
   "item.powertech.molybdenum_ingot": "Molybdenum Ingot",
   "item.powertech.molybdenum_nugget": "Molybdenum Nugget",
   "item.powertech.technetium_nugger": "Technetium Nugget",
+  "item.powertech.raw_molybdenum": "Raw Molybdenum",
 
   "block.powertech.molybdenum_block": "Molybdenum Block",
   "block.powertech.technetium_block": "Techneetium Block",
